# open-decision-receipt

./: CONTRIBUTING.md  DECISION-RECEIPT-MANIFESTO.md  LICENSE  LIFECYCLE.md  README.md  SECURITY.md  SIGNAL-MAP.md  decision-receipt.schema.yaml  pyproject.toml
.github/workflows/: ci.yml
dam/action_bundles/: cert_gated_deployment.yaml  soc_automated_containment.yaml
dam_verify/: chain.py  cli.py  engine.py  grammar.py  okf.py  receipt.py
docs/: README.md  architecture.md  case-study-ai-hallucinated-precedent.md  case-study-loan-denial.md  case-study-soc-containment.md  future-directions.md  lifecycle.md  limitations.md  mcp-verified-action-bridge.md  quickstart.md  reference-mappings.md
docs/mappings/: conformance.md  governance.md  provenance.md  security.md
examples/: claim-payout-receipt.yaml  gift-card-fraud-no-receipt.yaml  incident-response-containment-receipt.yaml  legal-ai-precedent-blocked-receipt.yaml  loan-denial-receipt.yaml  verify-action-deploy.json  verify-action-soc-containment.json
integrations/: __init__.py
integrations/google_adk/: README.md  __init__.py  governed.py  models.py
integrations/google_adk/loan_denial/: __init__.py  agent.py  case-pack.yaml  request.json
integrations/google_adk/soc_analyst_containment/: __init__.py  agent.py  case-pack.yaml  request.json
schemas/: action-request.schema.json  decision-receipt.schema.json
scripts/: drift-reopen-demo.sh
tests/: test_google_adk_integration.py  test_odr_verify_action_bridge.py  test_odr_verify_action_extensions.py  test_odr_verify_action_okf_promotion.py  test_receipt_integrity.py  test_schema_examples.py
tests/fixtures/: soc_automated_containment.yaml
