[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-decision-receipt"
version = "0.1.0"
description = "Vendor-neutral schema and reference implementation for replayable AI Decision Receipts"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "LumiRosh"}]
keywords = ["decision-receipt", "open-decision-receipt", "ai-governance", "audit", "decision-records", "infosec", "mcp"]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
adk = ["google-adk==2.4.0"]

[project.scripts]
dam-verify = "dam_verify.cli:main"

[tool.setuptools.packages.find]
include = ["dam_verify*", "integrations*"]
exclude = ["schemas*", "tests*"]

[tool.setuptools.package-data]
"integrations.google_adk.loan_denial" = ["*.yaml", "*.json"]
"integrations.google_adk.soc_analyst_containment" = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
